language-plain overflow-y fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -141,4 +141,5 @@ h1, h2, h3, h4, h5, h6 {
 code.language-plain {
   width: 100%;
   padding: 10px;
+  overflow-y: scroll;
 }
